2001-08-22  Roland McGrath  <roland@frob.com>

	* sysdeps/generic/ldsodefs.h (_dl_load_lock): Declare it here with
	__libc_lock_define_recursive.
	* elf/dl-open.c: Don't declare it here any more.
	* elf/dl-close.c: Likewise.
	* elf/dl-lookup.c: Likewise.
	* elf/dl-iteratephdr.c: Likewise.
	* elf/dl-lookup.c (add_dependency): Use __libc_lock_lock_recursive and
	__libc_lock_unlock_recursive.
	* elf/dl-close.c (_dl_close): Likewise
	* elf/dl-iteratephdr.c (__dl_iterate_phdr): Likewise
	* elf/dl-open.c (_dl_open): Likewise

	* sysdeps/generic/bits/libc-lock.h
	(__libc_lock_define_recursive): New macro.
	* sysdeps/generic/bits/stdio-lock.h (_IO_lock_t): Use it.
	(_IO_lock_lock): Use __libc_lock_lock_recursive.
	(_IO_lock_unlock): Use __libc_lock_unlock_recursive.

	* conform/conformtest.pl (checknamespace): Sort the output list.

	* sysdeps/generic/bits/poll.h (POLLWRBAND): New alias for POLLOUT.
	(POLLRDNORM, POLLRDBAND, POLLWRNORM, POLLWRBAND): Make these
	definitions conditional on [__USE_XOPEN].

	* sysdeps/mach/hurd/bits/fcntl.h (O_ASYNC, O_FSYNC, O_SYNC): Define
	these unconditionally, not only use [__USE_BSD], so as to match
	the sysdeps/unix/sysv/linux files.

2001-08-22  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (add_temp_file): Add __attribute__ ((unused)) to
	avoid warnings.

	* dlfcn/tst-dladdr.c (do_test): Get address of ref1 using
	DL_LOOKUP_ADDRESS.

2001-08-22  Roland McGrath  <roland@frob.com>

	* sysdeps/generic/bits/sigaction.h (struct sigaction): Fix up
	conditionalization of sa_handler/sa_sigaction member types to
	match the sysdeps/unix/sysv/linux file.

2001-08-22  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-addr.c (_dl_addr): Handle broken binaries with zero
	symbol sizes a bit better.

	* sysdeps/ia64/strncpy.S: Complete rewrite.
	Contributed by Jakub Jelinek <jakub@redhat.com>.

	* string/stratcliff.c (main): Add strncpy test.

2001-08-22  Roland McGrath  <roland@frob.com>
